20-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: demo-go-api
  replicas: 1
  template:
    metadata:
      labels:
        app: demo-go-api
    spec:
      containers:
      - name: demo-go-api
        image: ghcr.io/joberly/demo-go-api:latest
        ports:
        - name: web
          containerPort: 8000
