20-api-services.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-go-api
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: demo-go-api
