20-site-services.yml
apiVersion: v1
kind: Service
metadata:
  name: site
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: site
